fix: room and client update method