@@ -5,22 +5,25 @@ import com.javainterns.bookingroom.model.Client;
 import com.javainterns.bookingroom.model.dto.ClientRequest;
 import com.javainterns.bookingroom.model.mapper.ClientRequestMapper;
 import com.javainterns.bookingroom.repository.ClientRepository;
+import com.javainterns.bookingroom.utils.Messages;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 public class ClientServiceImpl implements ClientService {
-
-    private ClientRepository clientRepository;
-    private ClientRequestMapper clientRequestMapper;
+    private static final String CLIENT_NOT_FOUND = "client.record.not.found";
+    private final ClientRepository clientRepository;
+    private final ClientRequestMapper clientRequestMapper;
+    private final Messages messages;
 
     @Autowired
-    public ClientServiceImpl(ClientRepository clientRepository, ClientRequestMapper clientRequestMapper) {
+    public ClientServiceImpl(ClientRepository clientRepository, ClientRequestMapper clientRequestMapper, Messages messages) {
         this.clientRepository = clientRepository;
         this.clientRequestMapper = clientRequestMapper;
+        this.messages = messages;
     }
 
     @Override
@@ -31,25 +34,26 @@ public class ClientServiceImpl implements ClientService {
 
     @Override
     public ClientRequest findById(Long id) {
-        return clientRequestMapper.toClientRequest(clientRepository.findById(id).orElseThrow(() -> new NoRecordFoundException("Client Record Not Found")));
+        return clientRequestMapper.toClientRequest(clientRepository.findById(id).orElseThrow(() -> new NoRecordFoundException(messages.get(CLIENT_NOT_FOUND))));
 
     }
 
     @Override
     public List<ClientRequest> findAll() {
-        return clientRepository.findAll().stream().map(x -> clientRequestMapper.toClientRequest(x)).collect(Collectors.toList());
+        return clientRepository.findAll().stream().map(clientRequestMapper::toClientRequest).toList();
     }
 
     @Override
     public void delete(Long id) {
-        if (!clientRepository.existsById(id)) throw new NoRecordFoundException("Client Record Not Found");
+        if (!clientRepository.existsById(id)) throw new NoRecordFoundException(messages.get(CLIENT_NOT_FOUND+id));
         clientRepository.deleteById(id);
     }
 
     @Override
     public ClientRequest update(ClientRequest clientRequest) {
-        Client client = clientRequestMapper.toClient(findById(clientRequest.getId()));
-        return clientRequestMapper.toClientRequest(clientRepository.save(client));
+        Optional<Client> client = clientRepository.findById(clientRequest.getId());
+        if (client.isEmpty()) throw new NoRecordFoundException(messages.get(CLIENT_NOT_FOUND+clientRequest.getId()));
+        Client savedClient = clientRepository.save(clientRequestMapper.toClient(clientRequest));
+        return clientRequestMapper.toClientRequest(savedClient);
     }
-
 }
